benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/debug/bignum_ModExp_DivMod_Mul_iter5_error.log
=== Verification Error - Iteration 5 ===
File: benchmarks/verus/bignum/files/bignum_ModExp_DivMod_Mul.rs
Time: 2025-09-15 11:14:05

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:44:28
   |
44 |     ensures ValidBitString(result) && Str2Int(result) == n,
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:44:47
   |
44 |     ensures ValidBitString(result) && Str2Int(result) == n,
   |                                               ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.

--------------------------------------------------------------------------------

Additional Output:
error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:44:28
   |
44 |     ensures ValidBitString(result) && Str2Int(result) == n,
   |                            ^^^^^^ not found in this scope

error[E0425]: cannot find value `result` in this scope
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_10h42/bignum_ModExp_DivMod_Mul_impl.rs:44:47
   |
44 |     ensures ValidBitString(result) && Str2Int(result) == n,
   |                                               ^^^^^^ not found in this scope

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0425`.
